cmake_minimum_required(VERSION 3.5)
project(cic)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c11 -Wpedantic -Werror -Wall")
add_definitions(-std=c11)
add_executable(client client.c)
add_executable(server server.c)
add_executable(ctest ctest.c)
target_link_libraries(ctest ncurses)
target_link_libraries(ctest pthread)
add_executable(testclient testclient.c)